# Screen-AI-chatbot

./: README.md  local_memory.db  pyproject.toml  secret.key
action_executor/: executor.py
frontend/: index.html
memory/: secure_memory.py
planner/: agent.py
safety_controller/: gatekeeper.py
screen_capture/: capture.py
vision_engine/: analyzer.py
voice_engine/: audio.py
