[project]
name = "local-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.137.1",
    "faster-whisper>=1.2.1",
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pyaudiowpatch>=0.2.12.8",
    "pyautogui>=0.9.54",
    "pywin32>=312",
    "requests>=2.34.2",
    "speechrecognition>=3.16.1",
    "uvicorn>=0.49.0",
]
